Bug 21506: DataTables four button pagination uses the wrong icon for First and Last buttons
Pages with DataTables' four button pagination use the wrong
icon for 'First' and 'Last'. Also, the icons for all four
buttons are truncated at the bottom.

This patch fixes that.

Test plan:
1) Go to a page that uses four button pagination (e.g. Home >
   Administration > MARC frameworks) and notice how the
   pagination icons for First/Previous and Next/Last are the
   same. Also notice all four icons are clipped at the bottom.
2) Apply the patch.
3) Refresh the page; the First and Last buttons' icons now
   include a vertical bar, and there is no clipping visible.
4) For completeness, check other affected pages as well.


(cherry picked from commit 074c329774adb7b23f85293a7f6d146c0d989f99)
(cherry picked from commit 8802d32b7f4e9f4642d3b0f7f7f8a871b85662ed)

--- a/koha-tmpl/intranet-tmpl/prog/css/datatables.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/datatables.css
@@ -167,7 +167,7 @@ div.dataTables_paginate.paging_four_button {
 .paginate_enabled_last {
     cursor: pointer;
     *cursor: hand;
-    padding: .1em 0;
+    padding: .2em 0;
 }
 
 .paginate_disabled_previous,
@@ -177,6 +177,8 @@ div.dataTables_paginate.paging_four_button {
     color: #111 !important;
 }
 
+.paginate_disabled_first,
+.paginate_enabled_first,
 .paginate_disabled_previous,
 .paginate_enabled_previous {
     padding-left: 23px;
